attempting to fix bug as piechart not showing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ input[type="number"] {
   width: 250px;
   z-index: 1000;
 }
-.charts-container {
+/* .charts-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -128,4 +128,4 @@ input[type="number"] {
   .charts-container {
     grid-template-columns: 1fr;
   }
-}
+} */
